mvm-chart/templates/ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: papi.dev.vigocare.com
    http:
      paths:
      - backend:
          serviceName: admin-api
          servicePort: 3200
  # - host: papi.dev.vigocare.com
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: device-api
  #         servicePort: 3300
  - host: dapi.dev.vigocare.com
    http:
      paths:
      - backend:
          serviceName: patient-api
          servicePort: 3330
